--- a/src/main/webapp/thymeleaf/map.html
+++ b/src/main/webapp/thymeleaf/map.html
@@ -13,11 +13,25 @@
 <script th:inline="javascript">
     /*<![CDATA[*/
 
+    function timeColor(value) {
+        if (value < 7) {
+            return 'green';
+        }
+        if (value < 14) {
+            return 'yellow';
+        }
+        if (value < 21) {
+            return'red';
+        }
+        return 'black';
+    }
+
+
     var pointsFeatures = [];
     var pointList = [[${points}]]
     for (var i = 0; i < pointList.length; i++) {
-        var lat = pointList[i].x;
-        var lon = pointList[i].y;
+        var lat = pointList[i].destination.x;
+        var lon = pointList[i].destination.y;
 
         var feature = new ol.Feature({
     		geometry: new ol.geom.Point(ol.proj.transform([lon, lat], 'EPSG:4326', 'EPSG:3857')),
@@ -29,7 +43,7 @@
                         color: '#fff'
                     }),
                     fill: new ol.style.Fill({
-                        color: '#555'
+                        color: timeColor(pointList[i].time)
                     })
                 })
             }));
