--- a/src/main/webapp/thymeleaf/map.html
+++ b/src/main/webapp/thymeleaf/map.html
@@ -30,15 +30,15 @@
     var pointsFeatures = [];
     var pointList = [[${points}]]
     for (var i = 0; i < pointList.length; i++) {
-        var lat = pointList[i].destination.x;
-        var lon = pointList[i].destination.y;
+        var lat = pointList[i].latitude;
+        var lon = pointList[i].longitude;
 
         var feature = new ol.Feature({
     		geometry: new ol.geom.Point(ol.proj.transform([lon, lat], 'EPSG:4326', 'EPSG:3857')),
 	    });
         feature.setStyle(new ol.style.Style({
                 image: new ol.style.Circle({
-                    radius: 10,
+                    radius: 2,
                     stroke: new ol.style.Stroke({
                         color: '#fff'
                     }),
