--- a/src/main/webapp/thymeleaf/map.html
+++ b/src/main/webapp/thymeleaf/map.html
@@ -8,12 +8,28 @@
 <!--tr th:each="point : ${points}">
     <td th:text="${point.x}">Text ...</td>
 </tr-->
+<form class="form-inline">
+    <label>Action type &nbsp;</label>
+    <select id="type" class="form-control">
+        <option value="click" selected>Click</option>
+        <option value="singleclick">Single-click</option>
+        <option value="pointermove">Hover</option>
+        <option value="altclick">Alt+Click</option>
+        <option value="none">None</option>
+    </select>
+    <span id="status">&nbsp;0 selected features</span>
+    <span id="status2">&nbsp;0 selected features</span>
+</form>
 <div id="Map" class="map"></div>
 <script src="https://openlayers.org/en/v4.6.5/build/ol.js"></script>
+<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 <script th:inline="javascript">
     /*<![CDATA[*/
 
     function timeColor(value) {
+        if (value === 0) {
+            return 'white';
+        }
         if (value < 420) {
             return 'green';
         }
@@ -26,29 +42,37 @@
         return 'black';
     }
 
-    var wktReader = new ol.format.WKT();
-    var pointsFeatures = [];
-    var mapPointTime = [[${points}]]
-    var pointList = Object.keys(mapPointTime);
-    for (var i = 0; i < pointList.length; i++) {
+    function loadFeatures(mapPointTime) {
+        var pointList = Object.keys(mapPointTime);
+        var pointsFeatures = [];
+        for (var i = 0; i < pointList.length; i++) {
 
-	    var feature = wktReader.readFeature(pointList[i]);
-            feature.getGeometry().transform('EPSG:4326', 'EPSG:3857');
-            var time = mapPointTime[pointList[i]];
+            var feature = wktReader.readFeature(pointList[i]);
+                feature.getGeometry().transform('EPSG:4326', 'EPSG:3857');
+                var time = mapPointTime[pointList[i]];
 
-        feature.setStyle(new ol.style.Style({
-                image: new ol.style.Circle({
-                    radius: 4,
-                    stroke: new ol.style.Stroke({
-                        color: '#fff'
-                    }),
-                    fill: new ol.style.Fill({
-                        color: timeColor(time)
+            feature.setStyle(new ol.style.Style({
+                    image: new ol.style.Circle({
+                        radius: 5,
+                        fill: new ol.style.Fill({
+                            color: timeColor(time)
+                        })
                     })
-                })
-            }));
-        pointsFeatures.push(feature);
+                }));
+            pointsFeatures.push(feature);
+        }
+        return pointsFeatures;
     }
+
+    function loadMap(pointsFeatures){
+
+
+        return map;
+    }
+
+    var wktReader = new ol.format.WKT();
+    var mapPointTime = [[${points}]]
+    var pointsFeatures = loadFeatures(mapPointTime);
 
     var pointsSource = new ol.source.Vector({
         features: pointsFeatures
@@ -58,8 +82,8 @@
         source: pointsSource
     });
 
- 	var raster = new ol.layer.Tile({
-    	source: new ol.source.OSM()
+    var raster = new ol.layer.Tile({
+        source: new ol.source.OSM()
     });
 
     var map = new ol.Map({
@@ -70,6 +94,41 @@
             zoom: 12
         })
     });
+
+    var select = new ol.interaction.Select({
+        condition: ol.events.condition.click,
+    });
+
+    var selected = [];
+
+    var changeInteraction = function() {
+        map.removeInteraction(select);
+        map.addInteraction(select);
+        select.on('select', function(e) {
+            document.getElementById('status').innerHTML = '&nbsp;' +
+                e.target.getFeatures().getLength() +
+                ' selected features (last operation selected ' + e.selected.length +
+                ' and deselected ' + e.deselected.length + ' features)';
+            selected = selected.concat(select.getFeatures().getArray());
+            $.ajax({
+                contentType: "application/json; charset=utf-8",
+                type: "POST",
+                url: "/grid",
+                data: wktReader.writeFeatures(selected, { dataProjection: 'EPSG:4326', featureProjection: 'EPSG:3857' }),
+                success: function(data) {
+                    document.getElementById('status2').innerHTML = '&nbsp;' + data;
+                    var pointsFeatures = loadFeatures(data);
+                    points.getSource().clear();
+                    points.getSource().addFeatures(pointsFeatures);
+                },
+                error: function(jqXHR, textStatus, errorThrown) {
+                    console.log('error while post');
+                }
+            });
+        });
+    };
+
+    changeInteraction();
 
     /*]]>*/
 </script>
