--- a/src/main/webapp/thymeleaf/map.html
+++ b/src/main/webapp/thymeleaf/map.html
@@ -127,9 +127,9 @@
                     url: "/update",
                     data: wktReader.writeFeature(e.feature, { dataProjection: 'EPSG:4326', featureProjection: 'EPSG:3857' }),
                     success: function(data) {
-                        //var pointsFeatures = loadFeatures(data);
-                        //points.getSource().clear();
-                        //points.getSource().addFeatures(pointsFeatures);
+                        var pointsFeatures = loadFeatures(data);
+                        points.getSource().clear();
+                        points.getSource().addFeatures(pointsFeatures);
                     },
                     error: function(jqXHR, textStatus, errorThrown) {
                         console.log('error while post');
