--- a/src/main/webapp/thymeleaf/map.html
+++ b/src/main/webapp/thymeleaf/map.html
@@ -64,8 +64,20 @@
         return pointsFeatures;
     }
 
+    function loadRoad(modifiedRoads) {
+        var roadsFeatures = [];
+        for (var i = 0; i < modifiedRoads.length; i++) {
+            var feature = wktReader.readFeature(modifiedRoads[i]);
+            feature.getGeometry().transform('EPSG:4326', 'EPSG:3857');
+            roadsFeatures.push(feature);
+        }
+        return roadsFeatures;
+    }
+
     var wktReader = new ol.format.WKT();
-    var modelMapPointTime = [[${points}]]
+    var modelMapPointTime = [[${points}]];
+    var modifiedRoads = [[${roads}]];
+    var roadsFeatures = loadRoad(modifiedRoads);
     var pointsFeatures = loadFeatures(modelMapPointTime);
 
     var pointsSource = new ol.source.Vector({
@@ -77,7 +89,8 @@
     });
 
     var roadSource = new ol.source.Vector({
-        wrapX: false
+        wrapX: false,
+        features: roadsFeatures
     });
 
     var road = new ol.layer.Vector({
