test return void

--- a/src/main/webapp/thymeleaf/map.html
+++ b/src/main/webapp/thymeleaf/map.html
@@ -183,8 +183,7 @@
                 });
                 selected = selected.concat(selectFeatures);
 		        var pointsWkt = wktReader.writeFeatures(selected, { dataProjection: 'EPSG:4326', featureProjection: 'EPSG:3857' });
-                console.log(pointsWkt);
-                /*$.ajax({
+                $.ajax({
                     contentType: "application/json; charset=utf-8",
                     type: "POST",
                     url: "/grid",
@@ -200,7 +199,7 @@
 			            console.log(textStatus);
 			            console.log(errorThrown);
                     }
-                });*/
+                });
             });
         }
     };
