fake points, fake road

--- a/src/main/webapp/thymeleaf/map.html
+++ b/src/main/webapp/thymeleaf/map.html
@@ -131,7 +131,8 @@
             map.addInteraction(interaction);
             interaction.on('drawend', function(e){
                 var roadWKT = wktReader.writeFeature(e.feature, { dataProjection: 'EPSG:4326', featureProjection: 'EPSG:3857' });
-		        $.ajax({
+		    //var roadWKT = 'LINESTRING(19.891620397567753 49.99066264686823,19.889024019241337 49.99079370303119)';
+		    $.ajax({
                     contentType: "application/json; charset=utf-8",
                     type: "POST",
                     url: "/update",
@@ -182,7 +183,8 @@
                 });
                 selected = selected.concat(selectFeatures);
 		        var pointsWkt = wktReader.writeFeatures(selected, { dataProjection: 'EPSG:4326', featureProjection: 'EPSG:3857' });
-                $.ajax({
+                //var pointsWkt = 'GEOMETRYCOLLECTION(POINT(19.922953 50.065167),POINT(19.971818 50.028842),POINT(19.971445999999997 50.01766599999999),POINT(20.024457 50.03175400000001),POINT(19.807232 49.991352000000006),POINT(19.809762 50.06061199999999),POINT(19.887691 50.030799),POINT(20.105975 50.056535999999966),POINT(20.003407000000003 50.074077999999986),POINT(19.958355 50.089676999999995),POINT(19.890211000000004 50.01137),POINT(19.872241 50.110479999999995),POINT(19.898493 50.074194000000006),POINT(19.915748 49.99302499999999),POINT(20.076711999999997 50.06733199999999),POINT(19.968453 50.06050799999997),POINT(19.894122 50.05457999999999),POINT(20.007447 50.085657999999995),POINT(19.992605 50.020106999999996),POINT(19.919510000000002 50.08765199999999),POINT(20.016308 50.042912),POINT(19.91565 50.02248500000002),POINT(20.027717 50.081143999999995),POINT(19.979404000000002 50.085353999999995),POINT(20.044730999999995 50.017998000000006),POINT(19.859917 50.035865),POINT(20.142894 50.075526999999994),POINT(19.927465000000005 50.09012200000001),POINT(19.947554000000004 50.07873599999999),POINT(19.919024 50.02380500000004))';
+		$.ajax({
                     contentType: "application/json; charset=utf-8",
                     type: "POST",
                     url: "/grid",
